fixes that not only the default params are working + includes refactorings + extends argument parsing

--- a/paper/sparsians.tex
+++ b/paper/sparsians.tex
@@ -88,11 +88,11 @@ As a subsequent step we turn the dense vectorial word representations into spars
 \end{equation}
 where $\mathcal{C}$ is the convex set of matrices containing only such vectors whose norm does not exceeds $1$ and $\alpha$ contains the sparse coefficients encoding which basis vectors from $D$ takes part in the reconstruction of the vectorial representation of some element of the vocabulary. The only difference compared to \cite{TACL1063} is that here we ensure a non-negativity constraint over the elements of $\alpha$.
 
+For the elements of the vocabulary we ran the formal concept analysis tool of \citet{2010378} \footnote{\url{www.compsens.uni-tuebingen.de/pub/pages/personals/3/concepts.py}}.
+
 \section{Experimental results}
 
 \section{Conclusion}
-
-Formal concept analysis \citet{2010378} \footnote{\url{www.compsens.uni-tuebingen.de/pub/pages/personals/3/concepts.py}}
 
 \bibliography{semeval2018}
 \bibliographystyle{acl_natbib}
