--- a/paper/sparsians.tex
+++ b/paper/sparsians.tex
@@ -118,11 +118,11 @@ $G$ is called the extent and $B$ is the intent of the concept.
 \footnote{
   Those who are familiar with closure operators may note that the double
   application of $'$ is a closure operator both on objects and attributes: with
-  notation $\bar S=S''$, for all $S\subseteq G$ or $S\subseteq M$ we have
-  $S\subseteq \bar S$ and $\bar\bar S=S$. Thus the following conditions are
-  equivalent for all $A\subseteq G, B\subseteq M$:
+  notation $\bar S=S''$, for either $S\subseteq G$ or $S\subseteq M$ we have
+  $S\subseteq \bar S$ and $\bar{\bar S}=S$. Thus the following conditions are
+  equivalent for all $A\subseteq G$ and $B\subseteq M$:
   \begin{itemize}
-    \item \abconc is a concepts
+    \item \abconc~is a concept
     \item $A$ is a closed set with respect to $\bar .$
       and $B=A'$
     \item $B$ is a closed set with respect to $\bar .$ and $A=B'$
