petfold affil in progress

--- a/paper/sparsians.tex
+++ b/paper/sparsians.tex
@@ -50,10 +50,10 @@ Department of Informatics \\ University of Szeged \\
   Benczúr u. 33, H1068 Budapest, Hungary \\
   {\tt makrai.marton@nytud.mta.hu} \\\AND
   Péter Földiák \\
-  Affiliation / Address line 1 \\
-  Affiliation / Address line 2 \\
-  Affiliation / Address line 3 \\
-  {\tt email@domain} \\}
+  Secret Sauce Partners, \\
+  657 Mission Suite 410, \\ 
+  San Francisco CA 94105 \\
+  {\tt email@domain} \\} % TODO
 
 \date{}
 
