line break in title

--- a/paper/sparsians.tex
+++ b/paper/sparsians.tex
@@ -35,7 +35,8 @@
 \newcommand\BibTeX{B{\sc ib}\TeX}
 
 %Title format for system description papers by task participants
-\title{[300-sparsians] at SemEval-2018 Task 9: Employing Sparse Word Representations for Hypernym Discovery}
+\title{[300-sparsians] at SemEval-2018 Task 9: \\ 
+Employing Sparse Word Representations for Hypernym Discovery}
 % TODO Sparse Word Vectors and Concept Lattices for ...
 %Title format for task description papers by task organizers
 %\title{SemEval-2018 Task [TaskNumber]:  [Task Name]}
