--- a/paper/sparsians.tex
+++ b/paper/sparsians.tex
@@ -93,6 +93,9 @@ implementation that is efficient for gigaword corpora.
 Here we employ sparse coding for hypernym extraction in a different way, namely
 through Formal Concept Analysis (FCA).  
 
+nonneg \citep{Faruqui:2015,Fyshe:2015,Danish:2016}
+%                                     Danish, Dahiya, and Talukdar
+
 entities, music, Spanish
 
 a task kiírásában levő irodalom
