minor on nonneg sparse

--- a/paper/sparsians.tex
+++ b/paper/sparsians.tex
@@ -93,8 +93,8 @@ implementation that is efficient for gigaword corpora.
 Here we employ sparse coding for hypernym extraction in a different way, namely
 through Formal Concept Analysis (FCA).  
 
-nonneg \citep{Faruqui:2015,Fyshe:2015,Danish:2016}
-%                                     Danish, Dahiya, and Talukdar
+nonneg \citep{Faruqui:2015,Fyshe:2015}
+% a SPINE idézi Danish+ 16-ot, de az önhivatkozás
 
 entities, music, Spanish
 
