changes negative sample generation strategy back to pre-submission style (i.e. only valid training hypernyms can be selected)

--- a/paper/sparsians.tex
+++ b/paper/sparsians.tex
@@ -26,8 +26,9 @@
 % smaller than 5cm (the original size); we will check this
 % in the camera-ready version and ask you to change it back.
 
-\title{[300-sparsians] at SemEval-2018 Task 9: \\
-Employing Sparse Word Representations for Hypernym Discovery}
+\title{300-sparsians at SemEval-2018 Task 9: \\
+Hypernymy as interaction of sparse attributes}
+%Employing Sparse Word Representations for Hypernym Discovery}
 % TODO dorp "Employing"
 
 \author{Gábor Berend \\
