--- a/paper/sparsians.tex
+++ b/paper/sparsians.tex
@@ -77,6 +77,9 @@ Department of Informatics \\ University of Szeged \\
 
 \section{Introduction}
 
+% röviden, mondjuk úgy 2-3 mondatban le kéne írni a shared task feladatát
+For further details of the shared task see \cite{Camacho-Collados:2018}.
+
 Natural language phenomena are extremely sparse by their nature, whereas
 continuous word embeddings employ dense representations of words. Turning
 these dense representations into a much sparser form can help in focusing on
@@ -91,8 +94,8 @@ dimensions that correspond to top level nodes should focus on “general”
 contexts that are present in most words. \citep{Yogatama:2015} offer an
 implementation that is efficient for gigaword corpora.
 
-Here we employ sparse coding for hypernym extraction in a different way, namely
-through Formal Concept Analysis (FCA).  
+Here we illustrate the effectiveness of sparse coding derived word representations in the task of hypernymy extraction. Additionally, we employ sparse word representations in a different way, namely through Formal Concept Analysis (FCA).
+Our source code in available at \url{https://github.com/begab/fca_hypernymy}.
 
 % nonneg \citep{Faruqui:2015,Fyshe:2015}
 % a SPINE idézi Danish+ 16-ot, de az önhivatkozás
@@ -100,10 +103,6 @@ through Formal Concept Analysis (FCA).
 %entities, music, Spanish
 
 %a task kiírásában levő irodalom
-
-For further details of the shared task see \cite{Camacho-Collados:2018}.
-
-Our source code in available at \url{https://github.com/begab/fca_hypernymy}.
 
 \subsection{Formal concept analysis}
 
@@ -187,8 +186,12 @@ Formal Concept Analysis (FCA) is relatively new \citep{Cimiano:2005}.
 
 We use the popular skip-gram (SG) %and continuous-bag-of-words (CBOW)
 approach \cite{Mikolov:2013f} to train $d=100$ dimensional dense distributed
-word representations for each sub-corpora. For some subcorpus $x\in\{1A, 1B, 1C, 2A, 2B\}$, we denote
-the embedding matrix as $W_x \in \mathbb{R}^{\lvert V_x \rvert \times d}$ with
+word representations for each sub-corpora. The word embeddings are trained over the text corpora provided by the shared task organizers with the default training parameters of \texttt{word2vec} (w2v), i.e.~a window size of 10 and negative 25 negative samples for each positive contexts.
+
+We derived multi-token units by relying of the \texttt{word2phrase} software accompanying the w2v toolkit. An additional source for identifying multi-token units in the training corpus was the list of potential hypernyms released for each subtask by the shared task organizers.
+
+For some subcorpus of the shared task $x\in\{1A, 1B, 1C, 2A, 2B\}$, we denote
+the embedding matrix as $W_x \in \mathbb{R}^{d \times \lvert V_x \rvert}$ with
 $\lvert V_x \rvert$ denoting the size of the vocabulary and $d$ is set to 100
 as stated previously.
 
@@ -198,15 +201,15 @@ sparse word vectors akin to \citet{Berend:2017} by solving for
 \min\limits_{D \in \mathcal{C}, \alpha \in \mathbb{R}_{\geq0}} \lVert D\alpha - W_{x} \rVert_F + \lambda \lVert \alpha \rVert_1,
 \label{nonneg_SPAMS_objective}
 \end{equation}
-where $\mathcal{C}$ is the convex set of matrices consisting of vectors
-with norm at most $1$ and $\alpha$ contains the sparse coefficients of word forms. The only difference
+where $\mathcal{C}$ refers to the convex set of $\mathbb{R}^{\lvert d \times k}$ matrices consisting of $d$-dimensional columns vectors
+with norm at most $1$ and $\alpha$ contains the sparse coefficients for the elements of the vocabulary. The only difference
 compared to \cite{Berend:2017} is that here we ensure a non-negativity
 constraint over the elements of $\alpha$.
 
 For the elements of the vocabulary we ran the formal concept analysis tool of
 \citet{Endres:2010}\footnote{\url{www.compsens.uni-tuebingen.de/pub/pages/personals/3/concepts.py}}. In order to keep the size of the DAG outputted by the FCA algorithm manageable, we only included the query words and those hypernyms in the analysis which occur in the training dataset for the corpora.
 
-Next, we determine a handful of features for a pair of words $(q, h)$, that is a query $q$ and its potential hypernym $h$. We denote with $Q$ and $H$ the sequence of tokens constituting the query and hypernym phrases. Additionally, we refer to the set of basis vectors which are assigned non-zero weights in the reconstruction of the vectorial representation of $q$ and $h$ as $\phi(q)$ and $\phi(h)$. Finally, we denote with $\mathbf{q}$ and $\mathbf{h}$ the 100-dimensional dense vectorial representations of $q$ and $h$.
+Next, we determine a handful of features for a pair of expressions $(q, h)$, that is a query $q$ and its potential hypernym $h$. We denote with $Q$ and $H$ the sequence of tokens constituting the query and hypernym phrases. Additionally, we refer to the set of basis vectors which are assigned non-zero weights in the reconstruction of the vectorial representation of $q$ and $h$ as $\phi(q)$ and $\phi(h)$. Finally, we denote with $\mathbf{q}$ and $\mathbf{h}$ the 100-dimensional dense vectorial representations of $q$ and $h$.
 
 Table~\ref{table:core_features} provides an overview of the features employed for a $(q, h)$ pair. Additionally, it is also considered as a feature whether a particular candidate hypernym $h$ belongs to the top-50 most frequent hypernym for the category of $q$. Three more optional features are defined for incorporating the output of FCA, i.e.
 \begin{enumerate}
@@ -216,7 +219,9 @@ Table~\ref{table:core_features} provides an overview of the features employed fo
 \end{enumerate}
 During our ablation experiments, we refer to the above three features as the \emph{FCA} features.
 
-Finally, we define one indicator feature for every possible interaction term between the sparse coefficients in $\alpha$. That means that for a pair of words $(q, h)$ we defined $\Phi(q,h)=\phi(q) \times \phi(h)$, i.e.~they get assigned with the Descartes product derived from the indices of the nonzero coefficients in $\alpha$.
+Finally, we define one indicator feature for every possible interaction term between the sparse coefficients in $\alpha$. That means that for a pair of words $(q, h)$ we defined $\Phi(q,h)=\phi(q) \times \phi(h)$, i.e.~they get assigned with the Descartes product derived from the indices of the nonzero coefficients in $\alpha$. Note that this feature template induces $k^2$ features, with $k$ denoting the number of basis vectors introduced in the dictionary matrix $D$ according to Eq.~\ref{nonneg_SPAMS_objective}.
+
+In order to be able to rank potential candidates for previously unseen test query cases we trained a logistic regression classifier relying on the \texttt{sklearn} package. For each appropriate $(q,h)$ pair of words for which $h$ is a hypernym of $q$, we generated a number of negative samples $(q, h')$, such that the training data does not include $h'$ as a valid hypernym for $q$. For a given query $q$, belonging to either of the \textit{Concept} or \textit{Entity} category, we sampled $h'$ from those hypernyms which were included as a valid hypernym in the training data with respect to some $q' \neq q$ query phrase. The default number of negative samples generated for each positive training sample is 50. % Ha beleírjuk az 5000-es dolgot is, akkor itt lehet utalni rá, hogy lásd post-eval eredmények.
 
 \begin{table}
 	\begin{tabular}{ll}
@@ -258,6 +263,8 @@ Finally, we define one indicator feature for every possible interaction term bet
 	\label{table:MFH}
 	\caption{Results of our query type sensitive most frequent hypernym baseline.}
 \end{table}
+
+Table~\ref{table:coverage} shows the coverage of our vocabulary with respect the query words on the training and test datasets of the various subtasks.
 
 \begin{table}
 	\centering
